--- a/befunge93.cabal
+++ b/befunge93.cabal
@@ -92,7 +92,8 @@ executable befunge93
     -- Other library packages from which modules are imported.
     build-depends:
         base ^>=4.17.2.1,
-        befunge93
+        befunge93,
+        random ^>=1.2.1.2
 
     -- Directories containing source files.
     hs-source-dirs:   app
